css/main.scss
---
# Front matter comment to ensure Jekyll properly reads file.
---

// Imports
@import "variables";
@import "base";
@import "grid";
@import "fonts";
@import "typebase";
@import "layout";
@import "sidebar";
@import "buttons";

#site-header {
  margin: 0 ;
  background-color: $primary-color;

  @include media-query($on-palm) {
    height: 60vh
  }

  h3 {
    padding: 1em 0 1.3em 0;
    margin: 0 0 0 4em ;

    @include media-query($on-palm) {
      margin-left: .8rem;
      font-size: 3.5rem;
      line-height: 3.8rem;
    }

    a {
      color: white;
      text-decoration: none;

    }
  }


  #intro {
    border: 1px solid $text-color;
    border-right: none;
    border-left: none;

    h2 {
      margin:0;
      padding: .2em 0 .2em 0;
    }
  }

}

#register_form {
  form.form {
    margin: 2em auto 3em auto;
    max-width: 100%;
  }

  /* @media screen and (max-width: 992px) {
    form.form {
      max-width: 90%
    }
  } */

  form.form .form-input {
    padding-bottom: 1em
  }

  form.form label {
    display: block;
    margin-bottom: .3em;
  }

  form.form input, form.form textarea, form.form select, form.form input {
     background-color:#FFFFFF;
     border:solid 1px #A9A9A9;
     font-size:13px;
     color:#000000;

     -moz-border-radius:5px;
     -webkit-border-radius:5px;
     border-radius:5px;

     padding:10px;

     width: 90%;
  }
  form.form .submit input {
     background-color:#FFFFFF;
     border:solid 1px #A9A9A9;
     font-size:16px;
     color:#000000;
     font-weight:normal;
     padding:8px 25px;
     -moz-border-radius:5px;
     -webkit-border-radius:5px;
     border-radius:5px;
  }

  form.form .submit {
    font-size: .8em;
     margin-top:0px;
     margin-bottom:0px;
     text-align:left;
     width: auto;
     color: #fff;
     background-color: $primary-color;
     border-color: $primary-color;
     padding: 1em 1.2em;
    line-height: 0;
  }

}

footer {


}

hr {
  margin: 1em auto;
  width: 25%;
}

.post-title {
  font-family: 'Catamaran', 'Helvetica', sans-serif;

  margin-bottom: 0.3em;
}

$headshot_size: 200px;
$circle_size: 100px;

#team {
  list-style: none;

  display: flex;
  flex-direction: row;
  flex-flow: row;
  flex-wrap: wrap;


  margin: 0;

  li {
    width: 350px;
    margin-bottom: 2em;
  }

  .people {
    text-align: center;

    p {
      margin-top: .7em;
    }

    .headshot{
      img {
        height: $headshot_size;
      }
    }
  }
}

.dot {
  height: 20px;
  width: 20px;
  background-color: #fff;
  border-radius: 50%;
  display: inline-block;

  transition: .5s ease-in-out;
  transform: scale(1);

  &:hover {
    transform: scale(1.2);
  }
}

.circular {
  width: $circle_size*2;
  height: $circle_size*2;
  border-radius: $circle_size;
  -webkit-border-radius: $circle_size;
  -moz-border-radius: $circle_size;
}

.center {
  text-align: center;
}

.questions {
  padding: 0;
  margin: 0;
  // border-bottom: 1px solid #555;
  // background-color: $primary-color;
  color: $primary-color;
}

.question {
  transition: opacity .5s ease-in-out;
  transition: color .5s ease-in-out;

  &:hover {
    opacity: .5;
    color: $primary-color;
  }

  h3 {
    font-size: 2em;
    line-height: 1.5em;
  }
}

.posts-list {
  list-style: none;

  display: flex;
  flex-direction: row;
  flex-flow: row;
  flex-wrap: wrap;

  margin: 0;

  .thumbnail-img {
    width: 100%;
    height: 200px;
    background-position: center;
    background-size: 100%;
  }
  .post-meta {
    margin-top: .5em;
    font-size: .8em;
    text-transform: uppercase;
  }
  .post-title {
    margin: 0;
  }
  li {
    width: 300px;
    margin: 0 1em 1em 0;
    display: block;

    img {
      max-width: 100%;
      height: 300px
    }
  }



}

